--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -8,21 +8,21 @@ html(lang="en")
     body 
         header 
             h1 Noom
-        main 
+        main
             div#welcome
-                form
-                    input(placeholder="room name",required,type="text")
-                    button Enter Room
-                h4 Open Rooms: 
-                ul
-            div#room
-                h3
-                ul 
-                form#name
-                    input(type="text",required,placeholder="type name")
-                    button Save
-                form#msg
-                    input(type="text",required,placeholder="type message")
-                    button Send
+                form 
+                    input(placehorder="room name",required,type="text")
+                    button Enter room
+            div#call
+                div#myStream
+                    video#myFace(autoplay,playsinLine,width="400",height="400")
+                    button#mute Mute
+                    button#camera Turn Camera Off
+                    select#cameras
+                        option(value="fake") fake
+                    video#peerFace(controls,autoplay,playsinLine,width="400",height="400")
+
+
+        
         script(src="/socket.io/socket.io.js")
         script(src="/public/js/app.js")
